--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/2.jpg">
+                <img src="images/IMG-20230222-WA0011 (2).jpg">
             </div>
             <div class="about-col-2">
                 <h1 style="color: #ff004f;" class="sub-title">About Me</h1>
@@ -121,7 +121,7 @@
                 <div class="layer">
                     <h3>ShreeRam Cricket Acadamy</h3>
                     <p>The ShreeRam Cricket Acadamy is pure sports site where he has provides his facilities and other details of ground and fees structure etc.</p>
-                    <a href=""><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="index (2).html"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -129,7 +129,7 @@
                 <div class="layer">
                     <h3>Rock Paper Scissor</h3>
                     <p>RPS is a pure console game where the condition was mate then the output will print.</p>
-                    <a href=""><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="rps1.py"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -137,7 +137,7 @@
                 <div class="layer">
                     <h3>MO Fashion</h3>
                     <p>MO Fashion is clothes website for new trends clothes and provides his services like sell the products and show his products through MO Fashion website.</p>
-                    <a href=""><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="index (3).HTML"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                 <div class="social-icons">
                     <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://twitter.com/"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://instagram.com/mohan_pancholi_"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/mohan-sharma-6ab809218/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2"><i class="fa-solid fa-download"></i> Download CV</a>
