--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Your Name" required>
-                    <input type="text" name="Email" placeholder="Your Email" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea name="Message" row="6" placeholder="Your Message"></textarea>
-                    <button type="button" class="btn btn2">Submit</button>
+                    <button type="submit" class="btn btn2">Submit</button>
                 </form>
                 <span id="msg">
                     
@@ -219,7 +219,7 @@
 <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbwY2mgi72Nzp-0mjsKRv---FO1ABgr2l34W9FDmYYc8vD_ap5tnOZMzi5tNrN00Iu6w/exec'
     const form = document.forms['submit-to-google-sheet']
-    const msg = document.getElementById("msg");
+    const msg = document.getElementById("msg")
   
     form.addEventListener('submit', e => {
       e.preventDefault()
